# safetensors-to-litertlm

./: .gitignore  README.md  pyproject.toml
benchmarks/: refusal_style_prompts.json  smoke_prompt.json
src/safetensors_to_litertlm/: __init__.py  __main__.py
src/safetensors_to_litertlm/converter/: __init__.py  bundle_litertlm.py  export.py  export_gemma4.py
src/safetensors_to_litertlm/converter/backends/: __init__.py  base.py  gemma4.py  registry.py
src/safetensors_to_litertlm/utils/: __init__.py  behavior_benchmark.py  env.py  low_memory.py  model_inspector.py  parity_diff.py  quant.py  tee.py
tests/: test_behavior_benchmark.py  test_export_cli.py  test_export_profiles.py  test_inspect_litert.py
